# test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  clean.ps1  git-push.ps1  git-push.sh
include/: fgtest.h  test.hpp
include/test/: log.hpp  test.cpp  test.h  test.hpp
src/: fgtest.cpp  main.cpp
tests/: test_test.hpp  test_test_static.hpp
